--- a/exponential_analysis.Rmd
+++ b/exponential_analysis.Rmd
@@ -13,23 +13,25 @@ For our simulation, we are going to sample 40 values from the exponential distri
 library(ggplot2)
 
 set.seed(25)
-numSamples = 40
-numSims = 1000
-sampleData <- matrix(rexp(numSamples * numSims, 0.2), ncol = numSamples)
+lambda <- 0.2
+expectedMean <- expectedSd <- 1/lambda
+numSamples <- 40
+numSims <- 1000
+sampleData <- matrix(rexp(numSamples * numSims, lambda), ncol = numSamples)
 means <- apply(sampleData, 1, mean)
 variances <- apply(sampleData, 1, var)
 ```
 
-Our means vector now contains 1000 values that are the means of 40 exponential distribution samples in each simulation run. 
+The means vector now contains 1000 values that are the means of 40 exponential distribution samples in each simulation run. The variances vector contains the variance of each simulation run. 
 
 ### Distribution of Sample Means
-Let's first look at the distribution of our sample means. If we plot a histogram of the sample means we see that they are centered around the theoretical mean of five (1 / 0.2). We also plot a normal distribution curve with a mean of five and a stardard deviation of 5/sqrt(40) and see that the distribution of our sample means is approximately normal. We also print out the variance of our sample means and see that it is close to its expected value.
-``` {r plotSampleMeans, echo=FALSE, fig.height=3}
+Let's first look at the distribution of our sample means. If we plot a histogram of the sample means we see that they are centered around the theoretical mean of 1/lambda (5). We also plot a normal distribution curve with a mean of 1/lambda and a stardard deviation of (1/lambda)/sqrt(40) and see that the distribution of our sample means is approximately normal. We also print out the variance of our sample means and see that it is close to its expected value (1/labmda)^2/40.
+``` {r plotSampleMeans, echo=FALSE, fig.height=2.8}
 meanOfMeans <- mean(means)
 df <- as.data.frame(means)
 plot <- ggplot(df, aes(x=means)) 
 plot <- plot + geom_histogram(aes(y=..density..), colour="gray", fill="#daf0dd", binwidth=0.1)
-plot <- plot + stat_function(fun=dnorm, args=list(mean=5, sd=5/sqrt(40)))
+plot <- plot + stat_function(fun=dnorm, args=list(mean=expectedMean, sd=expectedSd/sqrt(40)))
 plot <- plot + geom_vline(xintercept = meanOfMeans)
 print(plot)
 
@@ -38,26 +40,31 @@ print(paste("Our expected sample variance =", 25/40))
 ```
 
 ### Distribution of Sample Variances
-Now let's look at the distribution of sample variances. We run a simulation similar to the above except we use the var function to get sample variances. Our plot again shows that the variance is centered around 25 as it should be (5^2).
+Now let's look at the distribution of sample variances. A plot of these variances shows that they are centered around (1/lambda)^2 (25) as expected.
 
 ``` {r plotSamplVariances, echo=FALSE, fig.height=3}
 df <- as.data.frame(variances)
 plot <- ggplot(df, aes(x=variances)) 
 plot <- plot + geom_histogram(aes(y=..density..), colour="gray", fill="#daf0dd", binwidth=10)
-plot <- plot + geom_vline(xintercept = (1/0.2)^2)
+plot <- plot + geom_vline(xintercept = (1/lambda)^2)
 print(plot)
 ```
 
 ### Confidence Interval
-Finally we calculate the 95% confidence interval for our sample distribution.
+Finally we calculate the 95% confidence interval for our sample means and show that the interval covers over 95% of our samples..
 ``` {r confidenceInterval}
-ci <- meanOfMeans + c(-1, 1) * qt(.975, numSamples - 1) * 5 / sqrt(numSamples)
-test <- sapply(means, function(m)
+interval <- meanOfMeans + c(-1, 1) * qt(.975, numSamples - 1) * (1/lambda) / sqrt(numSamples)
+covered <- sapply(means, function(mean)
 {
-      ci[1] < m & ci[2] > m  
+      interval[1] < mean & interval[2] > mean 
 })
-ci
-test
-sum(test)
+
+print(paste("Our confidence interval =", toString(round(interval, 4))))
+print(paste(sum(covered) / numSims * 100, "% of our sample means are covered by this interval.", sep=""))
 ```
+
+### Complete Rmd File
+The complete Rmd file for this report can be found at the following url:
+    [exponential_analysis.Rmd](https://github.com/rmb177/stat_inference_course_project/blob/master/exponential_analysis.Rmd)
+
 
